--- a/Test_embed.css
+++ b/Test_embed.css
@@ -10,23 +10,16 @@ html, body {
 }
 
 .smart-player-embed-container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 852px;
-  height: 0;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
   overflow: hidden;
-  padding-top: calc(480 / 852 * 100%);
   position: relative;
 }
 
 .smart-player-embed-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  max-width: 852px;
-  max-height: 480px;
+  position: absolute;
 }
 
 .smart-player-embed-iframe:-ms-fullscreen { 
