--- a/Test_embed.css
+++ b/Test_embed.css
@@ -3,6 +3,7 @@
 html, body {
   margin: 0;
   width: 100%;
+  height: 100%; /* Ensures full height for container scaling */
   text-align: center;
   background-color: #1a1a1a;
   box-sizing: border-box;
@@ -11,15 +12,19 @@ html, body {
 
 .smart-player-embed-container {
   width: 100%;
-  height: 100vh; /* Full viewport height */
-  overflow: hidden;
+  max-width: 100%; /* Prevents overflow on larger screens */
+  height: 0;
+  padding-top: 56.25%; /* Aspect ratio for 16:9 videos */
   position: relative;
 }
 
 .smart-player-embed-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
+  border: 0;
 }
 
 .smart-player-embed-iframe:-ms-fullscreen { 
@@ -27,9 +32,18 @@ html, body {
   max-height: 100%;
 }
 
-@media screen and ( max-height: 480px )
-{
-   .smart-player-embed-iframe {
-     max-height: 100vh;
-   }
+@media screen and (max-height: 480px) {
+  .smart-player-embed-container {
+    padding-top: 75%; /* Adjusts for smaller screens */
+  }
+
+  .smart-player-embed-iframe {
+    max-height: 100vh;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .smart-player-embed-container {
+    padding-top: 56.25%; /* Maintain aspect ratio for widescreen displays */
+  }
 }
